[gd_scene load_steps=6 format=3 uid="uid://c8t776dyqvfyk"]

[ext_resource type="FontFile" uid="uid://cx7p7b56jckga" path="res://assets/fonts/Kenney High Square.ttf" id="1_5bgjm"]
[ext_resource type="Script" uid="uid://bhdrqdmrgygvc" path="res://scenes/pause_menu/pause_menu.gd" id="1_qcmsd"]
[ext_resource type="AudioStream" uid="uid://b7788ukujt0mp" path="res://assets/audio/pause.ogg" id="3_10tpt"]

[sub_resource type="LabelSettings" id="LabelSettings_qcmsd"]
font = ExtResource("1_5bgjm")
font_size = 96

[sub_resource type="LabelSettings" id="LabelSettings_10tpt"]
font = ExtResource("1_5bgjm")
font_size = 24

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qcmsd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -20.0
offset_right = 31.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "PAUSED"
label_settings = SubResource("LabelSettings_qcmsd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SnakeStatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_10tpt")
horizontal_alignment = 1

[node name="WeaponStats" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="WeaponLabel1" type="Label" parent="VBoxContainer/WeaponStats"]
visible = false
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_10tpt")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer/WeaponStats"]
visible = false
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="WeaponLabel2" type="Label" parent="VBoxContainer/WeaponStats"]
visible = false
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_10tpt")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer/WeaponStats"]
visible = false
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="WeaponLabel3" type="Label" parent="VBoxContainer/WeaponStats"]
visible = false
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_10tpt")
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer/WeaponStats"]
visible = false
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="WeaponLabel4" type="Label" parent="VBoxContainer/WeaponStats"]
visible = false
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_10tpt")
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="VBoxContainer/WeaponStats"]
visible = false
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="WeaponLabel5" type="Label" parent="VBoxContainer/WeaponStats"]
visible = false
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_10tpt")
horizontal_alignment = 1

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_10tpt")
